syntax = "proto3";

package crm;

option go_package = "github.com/mark-by/little-busy-back/api/pkg/proto/crm";

service crmService {
  rpc GetUserByPhoneNumber(User) returns (User) {}
  rpc GetFutureEventsForUser(User) returns (Events) {}
  rpc GetLastRecordsForUser(User) returns (Events) {}
  rpc GetTomorrowEvents(Empty) returns (Events) {}
}

message Events {
  repeated Event Result = 1;
}

message Event {
  string ClientTel = 1;
  int64 StartTime = 2;
  int64 EndTime = 3;
  double Price = 4;
}

message User {
  string Tel = 1;
}

message Empty {}