syntax = "proto3";

package scheduler;

option go_package = "github.com/mark-by/little-busy-back/scheduler/pkg/proto/scheduler";

service Scheduler {
  rpc GetEvent(EventID) returns (Event) {}
  rpc GetEventsFor(Date) returns (Events) {}
  rpc GetEventsForCustomer(CustomerRequest) returns(Events) {}
  rpc CreateEvent(Event) returns (Event) {}
  rpc UpdateEvent(UpdateRequest) returns (Empty) {}
  rpc DeleteEvent(DeleteRequest) returns (Empty) {}
  rpc DeleteAllForCustomer(CustomerID) returns(Empty) {}
}

message Empty {}

message EventID {
  int64 EventID = 1;
}

message Date {
  int32 Year = 1;
  int32 Month = 2;
  int32 Day = 3;
}

message CustomerID {
  int64 ID = 1;
}

message CustomerRequest {
  int64 CustomerID = 1;
  int64 Since = 2;
  int32 Days = 3;
}

message DeleteRequest {
  int64 EventID = 1;
  int64 Date = 2;
  bool WithNext = 3;
}

message UpdateRequest {
  int64 Date = 1;
  bool WithNext = 2;
  Event Event = 3;
}

message Event {
  int64 ID = 1;
  int64 CustomerID = 2;
  string StartTime = 3;
  string EndTime = 4;
  string Description = 5;
  bool IsRecurring = 6;
  string Period = 7;
  string RecurringEndTime = 8;
}

message Events {
  repeated Event Events = 1;
}